--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-tooltip": "^5.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
